"Añadí busqueda por click en Enter"

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     
     <main>
-        <header>
-            <img src="https://img.icons8.com/ios-filled/50/ffffff/book.png"/>
+        <header id="bookify_logo">
+            <img  src="https://img.icons8.com/ios-filled/50/ffffff/book.png"/>
             <h1>Bookify</h1>
         </header>
         <aside class="aside">
             <h1>Check out your book!</h1>
-            <form action="">
+            <form onsubmit="return false;">
                 <input class="keywordSearch" type="text" name="" id="keyword">
                 <input type="button" id="submit" value="Send">
             </form>
