"Borre carpeta utils"

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </main>
     
     
-    <script src="./utils/index.js"></script>
+    <script src="./src/index.js"  type="module"></script>
+
 </body>
 </html>
