Añadí animación, unificar pulls

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         </header>
         <input type="checkbox" id="searchButton"> 
         <form class="form-responsive" onsubmit="return false;"> 
-            <input class="keywordSearch" type="text" name="">
-            <input type="button"  value="Get">
+            <input class="keywordSearch" type="text" name="" id="keyword2">
+            <input  type="button"  value="Get" id="submit2">
         </form> 
 
         <aside class="aside">
             <h1>Check out your book!</h1>
             <form onsubmit="return false;">
                 <input class="keywordSearch" type="text" name="" id="keyword">
-                <input type="button" id="submit" value="Get">
+                <input class="submit" type="button" id="submit" value="Get">
             </form>
             
         </aside>
