Función de responsive y desktop aplicada, con test

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </header>
         <input type="checkbox" id="searchButton"> 
         <form class="form-responsive" onsubmit="return false;"> 
-            <input class="keywordSearch" type="text" name="" id="keyword2">
-            <input  type="button"  value="Get" id="submit2">
+            <input class="keywordSearch" type="text" id="keywordResponsive">
+            <input  type="button"  value="Get" id="submitResponsive">
         </form> 
 
         <aside class="aside">
