--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
             <label for="searchButton">
                 <img class="search-button" src="https://img.icons8.com/material-sharp/24/ffffff/search.png"/>
             </label>
-            <img  class="logo_image"  src="https://img.icons8.com/ios-filled/50/ffffff/book.png"/>
-            <h1 id="bookify_logo">Bookify</h1>
+            <div class="logo-container">
+                <img  class="logo_image"  src="https://img.icons8.com/ios-filled/50/ffffff/book.png"/>
+                <h1 id="bookify_logo">Bookify</h1>
+            </div>
         </header>
         <input type="checkbox" id="searchButton"> 
         <form class="form-responsive" onsubmit="return false;"> 
